# docsearch-demo

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
docsearchdemo/: config.json  config.py  docfile_processor.py  logger.py  main.py
docsearchdemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: name1.docx  name2.docx  name3.docx
tests/: create_test_docs.py  test_cli_cov.py  test_docfile.py
tests/cli/: test_cli.py
tests/integration/: test_docfile.py
tests/test_data/: empty.docx  test1.docx  test2.docx  test3.docx
tests/unit/: test_utils.py
